/*
 * This file is part of Astarte.
 *
 * Copyright 2022 SECO Mind Srl
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";

package astarteplatform.msghub;

import "google/protobuf/timestamp.proto";

import "astarteplatform/msghub/astarte_type.proto";

/* Astarte message to be used when sending data to Astarte. */
message AstarteMessage{
  string interface_name = 1;               // Name of the interface to send data on.
  string path = 2;                         // Endpoint to send the data on.
  oneof payload {                          // Content of the message.
    AstarteDataType astarte_data = 3;      // Effective payload.
    AstarteUnset astarte_unset = 4;        // Null payload.
  }
  google.protobuf.Timestamp timestamp = 5; // Explicit timestamp for the message transmission.
}

/* Null payload for an `AstarteMessage`. */
message AstarteUnset{}
